--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AdminPortal": {
+    "ICIN-frontend": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/AdminPortal",
+            "outputPath": "dist/ICIN-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -25,9 +25,9 @@
             ],
             "styles": [
               "src/styles.css"
-
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -63,19 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "AdminPortal:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "ICIN-frontend:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "AdminPortal:build:production"
+              "browserTarget": "ICIN-frontend:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AdminPortal:build"
+            "browserTarget": "ICIN-frontend:build"
           }
         },
         "test": {
@@ -112,19 +111,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "AdminPortal:serve"
+            "devServerTarget": "ICIN-frontend:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "AdminPortal:serve:production"
+              "devServerTarget": "ICIN-frontend:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "AdminPortal",
+  "defaultProject": "ICIN-frontend",
   "cli": {
-    "analytics": false
+    "analytics": "691c6296-1d8b-41fb-ad5e-740d2f55c76a"
   }
 }
